@@ -25,6 +25,7 @@ Deprecated methods since 2.6.x and their replacements
 All:
 
 - wxLaunchDefaultBrowser() now supports wxBROWSER_NEW_WINDOW flag.
+- Added wxStandardPaths::GetResourcesDir() and GetLocalizedResourcesDir()
 - Added wxStringTokenizer::GetLastDelimiter(); improved documentation.
 - Speed improvements to wxRegEx when matching is done in a loop such as
   during a search and replace.
